microservices/apollo-k8s/infra/namespace-apps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apollo
  labels:
    name: apollo
    app.kubernetes.io/name: apollo
